## Process this file with automake to produce Makefile.in


INCLUDES = -I$(top_builddir)


lib_LTLIBRARIES = libCLHEP-Exceptions-@VERSION@.la

libCLHEP_Exceptions_@VERSION@_la_SOURCES = \
	ZMerrno.cc		\
	ZMexClassInfo.cc	\
	ZMexHandler.cc		\
	ZMexLogger.cc		\
	ZMexSeverity.cc		\
	ZMexception.cc		\
	ZMthrow.cc
